fix: backgound image overlaping

--- a/styles.css
+++ b/styles.css
@@ -11,9 +11,11 @@
 body {
     font-family: 'Kumbh Sans', sans-serif;
     background-color: var(--dark-cyan);
+    overflow: hidden;
 }
 .bg-img {
     position: absolute;
+    z-index: -10;
 }
 .bg-img-top {
     right: 50%;
@@ -27,7 +29,6 @@ body {
     /* box-shadow: [horizontal offset] [vertical offset] [blur radius] [optional spread radius] [color]; */
     box-shadow: 1px 1px 5px 1px rgba(167, 161, 161, 0.5) ;
     -webkit-box-shadow: 0px 0px 200px 0px;
-    /* -moz-box-shadow: 300px 300px 500px 600px; */
     border: none;
     border-radius: 10px;
     width: 20%;
@@ -110,7 +111,10 @@ body {
   }
 @media only screen and (max-width: 375px) {
     body {
-      background-color: lightblue;
+      overflow: hidden;
+    }
+    .bg-img{
+        overflow: hidden;
     }
     .card {
         width: 80%;
